// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test include-exclude-paths: exclude all but flip 1`] = `
"SNAPSHOT: exclude all but flip
diff --git a/node_modules/lodash/flip.js b/node_modules/lodash/flip.js
index c28dd78..346b9b6 100644
--- a/node_modules/lodash/flip.js
+++ b/node_modules/lodash/flip.js
@@ -10,19 +10,19 @@ var WRAP_FLIP_FLAG = 512;
  * @memberOf _
  * @since 4.0.0
  * @category Function
- * @param {Function} func The function to flip arguments for.
- * @returns {Function} Returns the new flipped function.
+ * @param {Function} func The function to flop arguments for.
+ * @returns {Function} Returns the new flopped function.
  * @example
  *
- * var flipped = _.flip(function() {
+ * var flopped = _.flop(function() {
  *   return _.toArray(arguments);
  * });
  *
- * flipped('a', 'b', 'c', 'd');
+ * flopped('a', 'b', 'c', 'd');
  * // => ['d', 'c', 'b', 'a']
  */
-function flip(func) {
+function flop(func) {
   return createWrap(func, WRAP_FLIP_FLAG);
 }
 
-module.exports = flip;
+module.exports = flop;
END SNAPSHOT"
`;

exports[`Test include-exclude-paths: no base files 1`] = `
"SNAPSHOT: no base files
diff --git a/node_modules/lodash/flip.js b/node_modules/lodash/flip.js
index c28dd78..346b9b6 100644
--- a/node_modules/lodash/flip.js
+++ b/node_modules/lodash/flip.js
@@ -10,19 +10,19 @@ var WRAP_FLIP_FLAG = 512;
  * @memberOf _
  * @since 4.0.0
  * @category Function
- * @param {Function} func The function to flip arguments for.
- * @returns {Function} Returns the new flipped function.
+ * @param {Function} func The function to flop arguments for.
+ * @returns {Function} Returns the new flopped function.
  * @example
  *
- * var flipped = _.flip(function() {
+ * var flopped = _.flop(function() {
  *   return _.toArray(arguments);
  * });
  *
- * flipped('a', 'b', 'c', 'd');
+ * flopped('a', 'b', 'c', 'd');
  * // => ['d', 'c', 'b', 'a']
  */
-function flip(func) {
+function flop(func) {
   return createWrap(func, WRAP_FLIP_FLAG);
 }
 
-module.exports = flip;
+module.exports = flop;
diff --git a/node_modules/lodash/newFile.md b/node_modules/lodash/newFile.md
new file mode 100644
index 0000000..3b2aed8
--- /dev/null
+++ b/node_modules/lodash/newFile.md
@@ -0,0 +1 @@
+this is a new file
diff --git a/node_modules/lodash/xor.js b/node_modules/lodash/xor.js
deleted file mode 100644
index d4d2860..0000000
--- a/node_modules/lodash/xor.js
+++ /dev/null
@@ -1,28 +0,0 @@
-var arrayFilter = require('./_arrayFilter'),
-    baseRest = require('./_baseRest'),
-    baseXor = require('./_baseXor'),
-    isArrayLikeObject = require('./isArrayLikeObject');
-
-/**
- * Creates an array of unique values that is the
- * [symmetric difference](https://en.wikipedia.org/wiki/Symmetric_difference)
- * of the given arrays. The order of result values is determined by the order
- * they occur in the arrays.
- *
- * @static
- * @memberOf _
- * @since 2.4.0
- * @category Array
- * @param {...Array} [arrays] The arrays to inspect.
- * @returns {Array} Returns the new array of filtered values.
- * @see _.difference, _.without
- * @example
- *
- * _.xor([2, 1], [2, 3]);
- * // => [1, 3]
- */
-var xor = baseRest(function(arrays) {
-  return baseXor(arrayFilter(arrays, isArrayLikeObject));
-});
-
-module.exports = xor;
END SNAPSHOT"
`;

exports[`Test include-exclude-paths: only base files, no clone files 1`] = `
"SNAPSHOT: only base files, no clone files
diff --git a/node_modules/lodash/_baseClamp.js b/node_modules/lodash/_baseClamp.js
index a1c5692..06b23fa 100644
--- a/node_modules/lodash/_baseClamp.js
+++ b/node_modules/lodash/_baseClamp.js
@@ -7,7 +7,7 @@
  * @param {number} upper The upper bound.
  * @returns {number} Returns the clamped number.
  */
-function baseClamp(number, lower, upper) {
+function patchPackage(number, lower, upper) {
   if (number === number) {
     if (upper !== undefined) {
       number = number <= upper ? number : upper;
@@ -19,4 +19,4 @@ function baseClamp(number, lower, upper) {
   return number;
 }
 
-module.exports = baseClamp;
+module.exports = patchPackage;
END SNAPSHOT"
`;

exports[`Test include-exclude-paths: only xor being deleted 1`] = `
"SNAPSHOT: only xor being deleted
diff --git a/node_modules/lodash/xor.js b/node_modules/lodash/xor.js
deleted file mode 100644
index d4d2860..0000000
--- a/node_modules/lodash/xor.js
+++ /dev/null
@@ -1,28 +0,0 @@
-var arrayFilter = require('./_arrayFilter'),
-    baseRest = require('./_baseRest'),
-    baseXor = require('./_baseXor'),
-    isArrayLikeObject = require('./isArrayLikeObject');
-
-/**
- * Creates an array of unique values that is the
- * [symmetric difference](https://en.wikipedia.org/wiki/Symmetric_difference)
- * of the given arrays. The order of result values is determined by the order
- * they occur in the arrays.
- *
- * @static
- * @memberOf _
- * @since 2.4.0
- * @category Array
- * @param {...Array} [arrays] The arrays to inspect.
- * @returns {Array} Returns the new array of filtered values.
- * @see _.difference, _.without
- * @example
- *
- * _.xor([2, 1], [2, 3]);
- * // => [1, 3]
- */
-var xor = baseRest(function(arrays) {
-  return baseXor(arrayFilter(arrays, isArrayLikeObject));
-});
-
-module.exports = xor;
END SNAPSHOT"
`;
